adding amar name

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										<h1 class="text-capitalize mb-3 mb-md-5">
 											<!-- headingTitle -->
 											<strong class="fwMedium d-block text-white position-relative headingTitle text-capitalize mb-3 mb-md-5 wow fadeInLeft" data-wow-delay="2s">Photographer and Tourism guide</strong>
-											<span class="d-block wow fadeInLeft" data-wow-delay="2.5s">Mohamed <span class="text-white">Natti</span></span>
+											<span class="d-block wow fadeInLeft" data-wow-delay="2.5s">Mohamed <span class="text-white">Amar</span></span>
 										</h1>
 										<p class="wow fadeInLeft" data-wow-delay="2.8s">A Photographer and Content Creator with a passion for entrepreneurship, media, and tourism. My love for capturing moments and creating content began as a hobby, but it quickly turned into a career when i realized that i could combine my passion with my entrepreneurial spirit. I use my photography skills to capture stunning visuals that tell compelling stories and evoke emotions in my audience.</p>
 										<!-- ibBtnsWrap -->
